--- a/style.css
+++ b/style.css
@@ -5,43 +5,38 @@
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
-    
-    
+body{ 
     background-color: black;
-
+}
+.resumo{
+    text-align: center;
+    color:white;
+    margin-top:10px;
+    border:3px solid white;
+    margin-left: 4px;
+    margin-right: 4px;
 }
 .header{
-    border-bottom:solid 2px black;
-    margin-top:50px;
-    width:30%;
-    background-color: #ffd700;
     display: flex;
     justify-content: center;
-    border-radius:20px 20px 0px 0px;
+    margin-top:50px;
     margin-left:auto;
     margin-right: auto;
-    font-size:90%; 
+    width:30%;
+    background-color: #ffd700;
+    border-bottom:solid 2px black;
+    border-radius:20px 20px 0px 0px;
+    font-size:90%;  
 }
 .titulo{
- padding:20px 0px 20px 0px ;
+    text-align: center;
+    padding:20px 0px 20px 0px ;
 }
-.listadeh1 h1{
-    display:inline-block;
-    margin-right: 10px;
-    justify-content: center;
-    padding:4px;  
-}
-.listadeh1 h1:hover{
-    color:white;
-    background-color: black;
- padding:4px;
-}
+
 .caixaprincipal{
     margin-left:auto;
     margin-right: auto;
     width: 30%;
-    height:500px;
     background-color: #ffd700;
     border-bottom:solid 2px black;
     display: flex;
@@ -49,7 +44,7 @@ body{
     height:80%;
     align-items: center;
 }
-.caixaprincipalsecundaria{
+.caixa-dos-dados{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -93,17 +88,7 @@ button{
     border:none;
     cursor:pointer;
 }
-textarea{
-    width:100%;
-    margin-bottom:20px;
-    height:90px;
-    font-size:40px;
-    resize: none;
-    border-radius: 30px;
-    cursor:auto;
-    text-align: center;
-    font-weight:bold;  
-}
+
 .containerfinal{
     display: flex;
     justify-content: center;
@@ -120,11 +105,19 @@ textarea{
     justify-content: center;
 }
 textarea{
+    width:100%;
+    margin-bottom:20px;
+    height:90px;
+    resize: none;
+    border-radius: 30px;
+    cursor:auto;
+    font-weight:bold;  
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     font-size: 15px;
     padding-top: 20px;
+    border:3px solid black;
 }
 select{
     text-align: center;
@@ -138,9 +131,7 @@ select{
     margin-top:10px;
     padding:10px;
 }
-.valor option{
-    height:40px;    
-}
+
 @media (max-width:1200px) {
     
     .header{
@@ -152,7 +143,7 @@ select{
     }
     .containerfinal{
         width:50%;
-        margin-bottom:40px;
+        margin-bottom:100px;
     }
 }
 
@@ -168,10 +159,7 @@ select{
         width:70%;
         height:300px;
     }
-    .containerfinal{
-        width:70%;
-        margin-bottom:40px;
-    }
+
     label{
         font-size: 20px;
         height:50px;
@@ -183,6 +171,10 @@ select{
     }
     select{
         margin-bottom: 20px;
+    }
+    .containerfinal{
+        width:70%;
+        margin-bottom:40px;
     }
 }
  
