--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body{
     width:100%;
 }
 img{
-    background-color:blue;
+    background-color:white;
     border-radius: 100%;
     width:17%;
     height:90%;
