--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ body{
     margin-left:auto;
     margin-right: auto;
     width: 30%;
-
     background-color: #ffd700;
     border-bottom:solid 2px black;
     align-items: center;
@@ -205,7 +204,10 @@ select{
 }
  
 @media (max-width:400px) {
-    
+    .resumo{
+        margin-left:auto;
+        margin-right:auto;
+    }
     .header{
         margin-top:20px;
         width:80%;
