--- a/style.css
+++ b/style.css
@@ -1,231 +1,161 @@
-*{  
-    box-sizing: border-box;
-    padding:0;
-    margin:0;
-    outline: none;
+* {
     font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-body{ 
-    background-color: black;
-}
-.resumo{
-    text-align: center;
-    color:white;
-    margin-top:10px;
-    border:3px solid white;
-    margin-left: 4px;
-    margin-right: 4px;
-}
-.header{
+body {
+    padding: 0;
+    margin: 0;
+    height: 50vw;
     display: flex;
     justify-content: center;
-    margin-top:50px;
-    margin-left:auto;
-    margin-right: auto;
-    width:30%;
-    background-color: #ffd700;
-    border-bottom:solid 2px black;
-    border-radius:20px 20px 0px 0px;
-    font-size:90%;  
+    align-items: center;
+    background-image: radial-gradient(circle at 50% -20.71%, #fe8f62 0, #ff8564 8.33%, #ff7967 16.67%, #ff6c6b 25%, #fd5e6e 33.33%, #f84e73 41.67%, #f23c78 50%, #ea287e 58.33%, #e10e86 66.67%, #d6008f 75%, #ca0098 83.33%, #bb00a3 91.67%, #aa00ae 100%);
+
 
 }
 
-.titulo{
-    text-align: center;
-    padding:20px 0px 20px 0px ;
+
+.caixa-principal {
+
+    height: 500px;
+    width: 500px;
+    background-image: radial-gradient(circle at 50% -20.71%, #ff57d2 0, #ff4edb 12.5%, #f046e3 25%, #d63feb 37.5%, #b53cf2 50%, #8c3df9 62.5%, #4f40ff 75%, #0046ff 87.5%, #004bff 100%);
+    border: 3px solid black;
+    border-radius: 20px;
+
+
 }
 
-.caixaprincipal{
+.header {
     display: flex;
     justify-content: center;
-    margin-left:auto;
-    margin-right: auto;
-    width: 30%;
-    background-color: #ffd700;
-    border-bottom:solid 2px black;
     align-items: center;
+    height: 15%;
+    border-bottom: 3px solid black;
+
 }
 
+.header h2 {
 
-.caixa-dos-dados{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    width:80%;
-    height: 90%;
+    text-align: center;
+
 }
-.selecoes{
-    display:flex;
+
+.body {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.father {
+    height: 50%;
+    display: flex;
     justify-content: center;
     align-items: center;
-    width:100%;
+
 }
-img{
-    background-color:white;
-    border-radius: 100%;
-    width:17%;
-    height:90%;
-    margin:5px;
-}
-label{
-    display:flex;
-    flex-direction: column;
+
+.mother {
+    height: 50%;
+    display: flex;
     justify-content: center;
-    margin-top:10px;
-    font-size:20px;
+    align-items: center;
+
+}
+
+.son-1 {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+}
+
+.son-1 input {
+    width: 40%;
+    height: 60%;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
     font-weight: bold;
-    height:75px;
-    width:80%;
+    font-size: 100%;
 }
 
-input{
-    margin-left: auto;
-    margin-right: auto;
-    border:none;
-    border-radius:5px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width:90%;
-    height:30px;
-    font-size:20px;
-    border:3px solid black;
-    padding:5px;
+
+
+.son-2 {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
-button{
-    height:40px;
-    width:78%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: black;
-    border-radius:20px;
-    color:white;
-    border:none;
-    cursor:pointer;
+.son-2 input {
+    width: 30%;
+    height: 40%;
+    border: none;
+    border-radius: 25px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 100%;
 }
 
-.containerfinal{
+
+.footer {
+
+
+    height: 20%;
+}
+
+.father-1 {
+    height: 30%;
+}
+
+.father-1 .son-1-1 {
+    height: 100%;
     display: flex;
     justify-content: center;
-    margin-left:auto;
-    margin-right: auto;
-    width: 30%;
-    background-color: #ffd700;
-    border-radius:0px 0px 20px 20px;
-    margin-bottom:40px;
+    border-bottom: 3px solid black;
+    padding: 10px;
+
 }
 
-.caixafinal{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-textarea{
-    width:100%;
-    margin-bottom:20px;
-    height:90px;
-    resize: none;
-    border-radius: 30px;
-    cursor:auto;
-    font-weight:bold;  
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    font-size: 15px;
-    padding-top: 20px;
-    border:3px solid black;
-}
-
-select{
-    text-align: center;
-    width:200px;
-    margin-bottom:10px;
-    margin-top:10px;
-    padding:10px;
-    font-size:20px;
+.father-1 .son-1-1 input {
+    height: 100%;
+    width: 50%;
+    font-size: 20px;
     font-weight: bold;
     border-radius: 20px;
-    background-color: black;
-    color:white;
-    margin-bottom:10px;
-    margin-top:10px;
-    padding:10px;
+}
+
+.mother-1 {
+    height: 50%;
 
 }
 
-@media (max-width:1200px) {
-    
-    .header{
-        width:50%;
-        margin-top:100px;
-    }
-    .caixaprincipal{
-        width:50%;
-    }
-    .containerfinal{
-        width:50%;
-        margin-bottom:100px;
-    }
+.son-2-2 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+#div-nova {
 
-@media (max-width:800px) {
-    
-    .header{
-        width:70%;
-        margin-top:100px;
-        text-align: center;
-    }
-    .caixaprincipal{
-        width:70%;
-        height:300px;
-    }
+    display: block;
+    background-color: white;
+    height: 100%;
+    width: 80%;
+    margin-top: 22%;
+    border-radius: 20px;
+    text-align: center;
+    font-weight: bold;
+    line-height: 50px;
 
-    label{
-        font-size: 20px;
-        height:50px;
-        margin:10px;
-    }
-    input{
-        width:100%;
-        height:30px;
-    }
-    select{
-        margin-bottom: 20px;
-    }
-    .containerfinal{
-        width:70%;
-        margin-bottom:40px;
-    }
+
 }
- 
-@media (max-width:400px) {
-    .resumo{
-        margin-left:auto;
-        margin-right:auto;
-    }
-    .header{
-        margin-top:20px;
-        width:80%;
-        
-    }
-    .caixaprincipal{
-        width:80%;
-    }
-    .containerfinal{
-        width:80%;
-        height:170px;
-        margin-bottom:40px;
-    }
-    .caixa-dos-dados{
-        margin-top:0;
-    }
-    select{
-        margin-top:0;
-    }
-
-} 
