--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    height: 50vw;
+    height: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,8 +83,6 @@ body {
     font-size: 100%;
 }
 
-
-
 .son-2 {
     width: 80%;
     height: 100%;
@@ -104,13 +102,6 @@ body {
     font-size: 100%;
 }
 
-
-.footer {
-
-
-    height: 20%;
-}
-
 .father-1 {
     height: 30%;
 }
@@ -125,11 +116,17 @@ body {
 }
 
 .father-1 .son-1-1 input {
-    height: 100%;
+    height: 70%;
     width: 50%;
     font-size: 20px;
     font-weight: bold;
     border-radius: 20px;
+}
+
+.footer {
+
+
+    height: 20%;
 }
 
 .mother-1 {
@@ -145,7 +142,7 @@ body {
     align-items: center;
 }
 
-#div-nova {
+#caixa-reposta {
 
     display: block;
     background-color: white;
@@ -156,6 +153,4 @@ body {
     text-align: center;
     font-weight: bold;
     line-height: 50px;
-
-
 }
