--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    height: 60vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -155,4 +155,21 @@ body {
     line-height: 50px;
 }
 
+
+
+@media (max-width:1024px){
+    .caixa-principal{
+        width: 60%;
+    }
+}
+@media (max-width:768px){
+    .caixa-principal{
+        width: 80%;
+    }
+}
+@media (max-width:480px){
+    .caixa-principal{
+        width: 80%;
+    }
+}
 
